# machinists-toolbox

./: README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
machinists_toolbox/: admin_helper.py  settings.py  urls.py
material/: admin.py  models.py
material/fixtures/: default.json
material/migrations/: 0001_initial.py
milling/: apps.py  calculator.py
milling/admin/: __init__.py  cutting.py  freecad.py  machine.py
milling/fixtures/: cutting_data.json  machines.json
milling/freecad/: template_generator.py
milling/migrations/: 0001_initial.py  0002_jobtemplate_coolant_mode.py  0002_jobtemplate_description.py  0003_alter_jobtemplate_coolant_mode.py  0004_alter_jobtemplate_coolant_mode.py
milling/models/: __init__.py  cutting.py  freecad.py  machine.py
milling/templates/admin/: job_template_change_form.html
tool_library/: admin.py  apps.py  constants.py  models.py
tool_library/fixtures/: default.json
tool_library/migrations/: 0001_initial.py  0002_tool_type.py  0003_alter_tool_material_alter_tool_type.py  0004_alter_tool_material_alter_tool_type.py  0005_tool_direction.py
tool_library/models/: __init__.py  tool.py  vendor.py
