[tool.poetry]
name = "Machinists Toolbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
djangorestframework = "*"
Markdown = "*"
django-filter = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint-django = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
