[project]
name = "machinists-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "django>=5.2.4",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "markdown>=3.8.2",
]

[dependency-groups]
dev = ["black>=25.1.0", "pylint-django>=2.6.1", "pytest>=8.4.1", "ruff>=0.12.3"]
